# pan

./: .gitignore  CMakeLists.txt  README.md  pan.sln
cmake/: catch2.cmake  eigen.cmake  matplotlib.cmake
examples/: CMakeLists.txt
examples/eigen_interaction/: CMakeLists.txt  main.cpp
examples/forward_diff/: CMakeLists.txt  df.cpp  df.hpp  main.cpp
examples/forward_differentiation/: CMakeLists.txt  main.cpp
examples/numerical_diff/: CMakeLists.txt  main.cpp
googletest/: googletest.vcxproj  googletest.vcxproj.filters
googletest/src/: gtest.cc
pan/: CMakeLists.txt  arithmetic_tuple.hpp  base.h  base.hpp  diff.hpp  dual.hpp  dual_base.hpp  expr.hpp  expr_printer.hpp  fixed_point.hpp  imaginary.h  imaginary.hpp  integer.h  integer_test.cpp  levelorder_vector.hpp  opt.hpp  pan.vcxitems  range.hpp
pan/include/pan/bases/: arithmetic_tuple.hpp  base.hpp  dual.hpp  dual_math.hpp  epsilon.hpp  imaginary.hpp  imaginary_complex.hpp
pan/include/pan/expr/: diff.hpp  evaluate.hpp  expr.hpp  expr_printer.hpp  opt.hpp
pan/include/pan/forward_diff/: forward_diff.hpp
pan/include/pan/integer/: integer.hpp  range.hpp  tag.hpp
pan/include/pan/util/: tuple_view.hpp
test/: CMakeLists.txt  arithmetic_tuple_test.cpp  base_test.cpp  diff_test.cpp  imaginary_complex_test.cpp  imaginary_real_test.cpp  imaginary_test.cpp  integer_test.cpp  levelorder_test.cpp  levelorder_vector.hpp  main.cpp  mink.cpp  ms_unsigned_minus_error_test.cpp  test.vcxproj  test.vcxproj.filters  tmp_test.cpp
test/bases/: CMakeLists.txt  arithmetic_tuple_test.cpp  base_test.cpp  dual_test.cpp  epsilon_test.cpp  imaginary_complex_test.cpp  imaginary_real_test.cpp  imaginary_test.cpp
test/diff/: CMakeLists.txt  diff_test.cpp  expr_printer_test.cpp  expr_test.cpp  opt_test.cpp
test/expr/: CMakeLists.txt  diff_test.cpp  expr_printer_test.cpp  expr_test.cpp  opt_test.cpp
test/forward_diff/: CMakeLists.txt  forward_diff_test.cpp
test/forward_diff/forward_diff/: forward_diff_test.cpp
test/util/: CMakeLists.txt  util_test.cpp
